--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "debug": "~2.6.3",
     "express": "^4.15.3",
     "jade": "^1.11.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.2",
     "morgan": "^1.8.2",
     "namor": "^1.1.1",
     "password-hash": "^1.2.2",
+    "prop-types": "^15.6.2",
     "react": "^15.6.2",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-sweetalert": "^4.4.1",
+    "react-confirm-bootstrap": "^5.3.0",
+    "react-datepicker": "^1.7.0",
     "react-dom": "^15.6.1",
+    "react-input-mask": "^2.0.4",
+    "react-js-pagination": "^3.0.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-signup-login-component": "^1.2.0",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "webpack": "^4.21.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
